[workspace]
members = [
    "crates/filter-expr",
    "crates/filter-expr-evaler",
]
resolver = "2"

[workspace.package]
version = "0.1.11"
edition = "2024"
license = "MIT"
repository = "https://github.com/PeterlitsZo/filter-expr"
keywords = ["filter", "expression", "parser", "ast"]
documentation = "https://docs.rs/filter-expr"

[workspace.dependencies]
async-trait = "0.1.89"
thiserror = "2.0.17"
