[package]
name = "filter-expr-evaler"
description = "Evaluator for filter expressions."
version = "0.1.10"
edition.workspace = true
license.workspace = true

[dependencies]
filter-expr = { path = "../filter-expr", version = "0.1.10" }

async-trait.workspace = true
thiserror.workspace = true
regex = "1.12.2"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }