[package]
name = "filter-expr-evaler"
description = "Evaluator for filter expressions."
version = "0.1.17"
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/filter-expr"

[dependencies]
filter-expr = { path = "../filter-expr", version = "0.1.17" }

async-trait.workspace = true
thiserror.workspace = true
regex = "1.12.2"
moka = { version = "0.12.12", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }
