[package]
name = "filter-expr"
description = "A library for parsing the filter expression."
version = "0.1.17"
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/filter-expr"

[dependencies]
async-trait.workspace = true
ordered-float = "5.1.0"
thiserror.workspace = true

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }
